--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,15 @@ flutter:
     - assets/filters_pics/dog_icon_white.png
     - assets/filters_pics/dog_icon_yellow.png
 
+    - assets/filters_pics/male_icon_white.png
+    - assets/filters_pics/male_icon_yellow.png
+    - assets/filters_pics/female_icon_white.png
+    - assets/filters_pics/female_icon_yellow.png
+
+    - assets/filters_pics/calm_icon_white.png
+    - assets/filters_pics/calm_icon_yellow.png
+    
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
