Сделан раздел Возраст, исправлена ошибка в названии, сделан первый экран фильтров

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,13 @@ flutter:
     - assets/filters_pics/medium_icon_yellow.png
     - assets/filters_pics/large_icon_white.png
     - assets/filters_pics/large_icon_yellow.png
+
+    - assets/filters_pics/young_icon_white.png
+    - assets/filters_pics/young_icon_black.png
+    - assets/filters_pics/adult_icon_white.png
+    - assets/filters_pics/adult_icon_black.png
+    - assets/filters_pics/old_icon_white.png
+    - assets/filters_pics/old_icon_black.png
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
