Сделан первый экран для анкеты пользователя

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ flutter:
     - assets/filters_pics/filters_next/short_icon_yellow.png
     - assets/filters_pics/filters_next/long_icon_white.png
     - assets/filters_pics/filters_next/long_icon_yellow.png
+
+    - assets/form/home_for_pets.png
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
