--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,7 +75,9 @@ flutter:
     - assets/menu/cards_active.png
     - assets/menu/favs_active.png
     - assets/menu/profile_active.png
+    - assets/form/check.png
     
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
