--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ flutter:
     - assets/menu/profile_active.png
     - assets/form/check.png
     
+    - assets/find_page/filter_button.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
