--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   flutter_svg: ^2.0.15
   introduction_screen: ^3.0.3
   carousel_slider: ^4.2.0
+  flutter_card_swiper: ^7.0.2
+
 
 dev_dependencies:
   flutter_test:
@@ -86,6 +88,77 @@ flutter:
     - assets/json_data/pets_info.json
     - assets/json_data/users_info.json
 
+    - assets/find/dog1.png
+    - assets/find/default_pet.png
+    - assets/find/dislike.png
+    - assets/find/like.png
+    - assets/find/star.png
+
+
+    # PETS PHOTOS
+    - assets/pets_photos/IMG_9077 1.png
+    - assets/pets_photos/IMG_9083 1.png
+    - assets/pets_photos/IMG_9089 1.png
+    - assets/pets_photos/IMG_9106 1.png
+    - assets/pets_photos/IMG_9114 1.png
+
+    - assets/pets_photos/DSC_5476 1.png
+    - assets/pets_photos/DSC_5391_1-min 1.png
+    - assets/pets_photos/DSC_5410 1.png
+    - assets/pets_photos/DSC_5464-min 1.png
+    - assets/pets_photos/DSC_5476 1.png
+
+    - assets/pets_photos/DSC09826 1.png
+    - assets/pets_photos/DSC09830 1.png
+    -  assets/pets_photos/DSC09836 (1) 1.png
+    -  assets/pets_photos/DSC09842 1.png
+    -  assets/pets_photos/DSC09844 1.png
+
+    - assets/pets_photos/5ac178cf-1dde-42a5-9 1.png
+    - assets/pets_photos/5d273ed7-731c-4d97-8 1.png
+    - assets/pets_photos/6c394443-a53f-47b9-a 1.png
+    - assets/pets_photos/800fed39-3291-4c1d-b 1.png
+    - assets/pets_photos/e30a7a2c-40a7-407f-a 1.png
+
+
+    - assets/pets_photos/IMG_5841 1.png
+    - assets/pets_photos/IMG_5880 1.png
+    - assets/pets_photos/IMG_5914 1.png
+    - assets/pets_photos/IMG_6130 1.png
+    - assets/pets_photos/IMG_6161 1.png
+
+    - assets/pets_photos/8W7A7390 1.png
+    - assets/pets_photos/8W7A7392 1.png
+    - assets/pets_photos/8W7A7422 1.png
+    - assets/pets_photos/8W7A7437 1.png
+    - assets/pets_photos/8W7A7459 1.png
+    - assets/pets_photos/8W7A7479 1.png
+
+    - assets/pets_photos/IMG_5767 1.png
+    - assets/pets_photos/IMG_5773 1.png
+    - assets/pets_photos/IMG_5779 1.png
+    - assets/pets_photos/IMG_5782 1.png
+    - assets/pets_photos/IMG_5805 1.png
+    - assets/pets_photos/IMG_5816 1.png
+
+    - assets/pets_photos/DSC_8563 1.png
+    - assets/pets_photos/DSC_8564 1.png
+    - assets/pets_photos/DSC_8628 1.png
+    - assets/pets_photos/DSC_8643 1.png
+    - assets/pets_photos/DSC_8651 1.png
+
+    - assets/pets_photos/IMG_2275 1.png
+    - assets/pets_photos/IMG_2268 1.png
+    - assets/pets_photos/IMG_2263 1.png
+    - assets/pets_photos/IMG_2254 1.png
+    - assets/pets_photos/IMG_2247 1.png
+    - assets/pets_photos/IMG_2241 1.png
+
+    - assets/pets_photos/e90e36aa-b208-49a7-a (1) 1.png
+    - assets/pets_photos/5711 (1) 1.png
+    - assets/pets_photos/5713 (1) 1.png
+    - assets/pets_photos/5718 (1) 1.png
+    - assets/pets_photos/5722 (1) 1.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
