--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_svg: ^2.0.15
   introduction_screen: ^3.0.3
   carousel_slider: ^4.2.0
+  flutter_card_swiper: ^7.0.2
 
 dev_dependencies:
   flutter_test:
