--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,8 +61,6 @@ flutter:
     - assets/filters_pics/filters_next/long_icon_white.png
     - assets/filters_pics/filters_next/long_icon_yellow.png
 
-    
-
     - assets/ai_pics/robot_2.png
     - assets/ai_pics/pet_1.png
     - assets/ai_pics/dog_2.png
@@ -167,11 +165,7 @@ flutter:
     - assets/pets_photos/5718 (1) 1.png
     - assets/pets_photos/5722 (1) 1.png
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/to/asset-from-package
+    - assets/pet_card/map.png
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
